Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "af = #Your code here"
+    "f = open(f#Your code here"
    ]
   },
   {
