Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('ny_times_movies'#Your code here"
+    "f = open('ny_times_movies.json'#Your code here"
    ]
   },
   {
