--- a/index.ipynb
+++ b/index.ipynb
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('ny_times_movies.json'#Your code here"
+    "f = open('ny_times_movies.json', 'r')#Your code here"
    ]
   },
   {
