Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,8 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('ny_times_movies.json', 'r')#Your code here\n",
-    "reponse"
+    "f = open('ny_times_movies.json', 'r')#Your code here"
    ]
   },
   {
@@ -83,6 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "#Your code here"
    ]
   },
