Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = \n",
+    "data = pd.DataFrame()\n",
     "\n",
     "#Your code here"
    ]
