Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,6 +94,7 @@
     }
    ],
    "source": [
+    "import pandas as\n",
     "data = pd.DataFrame(f['results'])\n",
     "\n",
     "#Your code here"
