--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('ny_times_movies.json', 'r')#Your code here"
+    "f = open('ny_times_movies.json', 'r')#Your code here\n",
+    "f = "
    ]
   },
   {
