Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "f = open('ny_times_movies.json', 'r')#Your code here\n",
-    "f = "
+    "f = json.load(f)"
    ]
   },
   {
