Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(#Your code here"
+    "len(data['cri'#Your code here"
    ]
   },
   {
