--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['review_url'] = [x fo#Your code here"
+    "data['review_url'] = [x for x in #Your code here"
    ]
   },
   {
