Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['review_url'] = df[link].map[#Your code here"
+    "data['review_url'] = df[link].map(lambda x #Your code here"
    ]
   },
   {
