--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['review_url'] = df[link].map(lambda x: data['url'#Your code here"
+    "data['review_url'] = df[link].map(lambda x: ['url']#Your code here"
    ]
   },
   {
