Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,6 +288,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for column in dat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data['review_url'] = df['link'].map(lambda x: x['url']#Your code here"
    ]
   },
