Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for value in data['link']"
+    "for value in data['link'][;]"
    ]
   },
   {
