Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
     }
    ],
    "source": [
-    "data['review_url'] = df['link'].map(lambda x: x['url'])#Your code here"
+    "data['review_url'] = dAT['link'].map(lambda x: x['url'])#Your code here"
    ]
   },
   {
