Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -332,7 +332,7 @@
     }
    ],
    "source": [
-    "data['review_url'] = data['link']['url']#Your code here"
+    "data['review_url'] = data['link'].map(lambda x: x['url'])#Your code here"
    ]
   },
   {
