Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     }
    ],
    "source": [
-    "for value in data['link'][:5]:\n",
+    "for x in data['link'][:5]:\n",
     "    print(value)"
    ]
   },
