--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
    ],
    "source": [
     "for x in data['link'][:5]:\n",
-    "    print(value)"
+    "    print(x)"
    ]
   },
   {
