Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -332,7 +332,8 @@
     }
    ],
    "source": [
-    "data['review_url'] = data['link'].map(lambda x: x['url'])#Your code here\n"
+    "data['review_url'] = data['link'].map(lambda x: x['url'])#Your code here\n",
+    "data['critics_']"
    ]
   },
   {
