--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,7 @@
    ],
    "source": [
     "data['review_url'] = data['link'].map(lambda x: x['url'])#Your code here\n",
-    "data['critics_10'] = data['c']"
+    "data['critics_10'] = data['critic']"
    ]
   },
   {
